# haios

./: .bandit  .dockerignore  .env  .gitignore  .haios_config.json  .mcp.json  3rdpartyeval-1.txt  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  check_schema.py  deprecated_ADMIN.md  deprecated_AGENT.md  deprecated_GEMINI.md  docker-compose.yml  feedback.txt  justfile  mcp-config.sh  pyproject.toml  requirements-refactor-updated.txt  requirements.txt  setup.sh  skills-claude-blog-2.txt  skills-claude-code-blog.txt  skills-subagents-blog-post.txt  stale_APIP-PROPOSAL.md  start.sh  update.sh  verify_environment.py
.claude/: governance-events.jsonl  haios-status-slim.json  haios-status.json  pending-alerts.json  session  settings.json  settings.local.json  validation.jsonl
3rdparteval/: 3rdpartyeval-12.md  3rdpartyeval-13.md  3rdpartyeval-4..md  3rdpartyeval-7.md  3rdpartyeval-8.md
__legacy/: docker-compose.yml  start.sh  update.sh
_future_specs/: haios_memory_mcp_api_v1.md
_legacy/: .pre-commit-config.yaml  .trivyignore  CHANGELOG.md  Dockerfile  README.md  package-lock.json  pyproject.toml
_legacy/.github/workflows/: cd.yml  ci.yml
_legacy/issues/: issue_3rdparty_eval_followup.txt  issue_clarifying_questions_retrofit.txt  issue_cross_link_update_g28.txt  issue_missing_diagrams.txt
_legacy/plans/archive/: plan_appendix_remediation_g30.txt  plan_hardkill_signal_handling.txt  plan_overspend_softkill.txt
_legacy/project_templates/: COST_REPORT.json
_legacy/scripts/: haios_foundry_schemav1.sql  lint_clarification_template.py  update_appendix_links.py  update_clarification_layout.py  update_clarifications.py
_legacy/src/: __init__.py  __main__.py  engine.py  task_executor.py
_legacy/src/core/: atomic_io.py  exceptions.py  paths.py  planner.py
_legacy/src/tests/: conftest.py  test_engine_happy_path.py
_legacy/src/tests/core/: test_atomic_io.py  test_config_loader.py  test_planner.py  test_registry_concurrency.py  test_state_manager.py
_legacy/src/tests/task_exec/: __init__.py
_legacy/src/utils/: __init__.py  schema_converter.py  signing_utils.py  snapshot_utils.py  state_manager.py  validators.py  vault_utils.py
docs/: CI_CD_SETUP.md  COGNITIVE_MEMORY_SYSTEM_SPEC.md  COGNITIVE_MEMORY_SYSTEM_SPEC.md.backup  CONSTRAINTS_AND_MITIGATIONS.md  MCP_INTEGRATION.md  OPERATIONS.md  README.md  README.md.backup  VISION_ANCHOR.md  epistemic_state.md  epistemic_state.md.example
epoch3/: README.md  foresight-schemas.md  foresight-spec.md  integration-patterns.md  memory-layer-mapping.md  reasoningbank-analysis.md  three-paradigm-model.md  unified-memory.md  v1.1-enhancements.md
epoch4_vision/: 00-PRINCIPLES.md  01-SUBSTRATE.md  02-RUNTIME.md  03-AGENTS.md  04-UTILITIES.md  05-CYCLES.md  06-LIFECYCLE.md  07-ERRORS.md  08-OPERATOR.md  09-SCHEMAS.md  10-GLOSSARY.md  11-PURPOSE.md  README.md
haios_etl/: DEPRECATED.md  README.md  __init__.py  cli.py  database.py  errors.py  extraction.py  health_checks.py  job_registry.py  mcp_server.py  processing.py  quality.py  refinement.py  retrieval.py  synthesis.py
issues/: issue_appendix_content_migration_g28.txt  issue_assumptions.txt  issue_distributed_gaps.txt
lint/: canon_linter.sh  check_cross_references.py  check_diagram_compliance.py  check_dupe_annotations.py
plans/: plan_adr_clarification_questions_g49.txt  plan_appendix_refactor_g25.txt  plan_devfast_mode_verification.txt  plan_documentation_onboarding_update.txt  plan_dr_drill_restore.txt  plan_test_coverage_ci.txt
projects/: 4rfv.md  theloft.md
rawdata/: basicworkflow.txt  calculatortool.txt  evaluatoroptimizer.txt  memorytool.txt  orchestratorworker.txt  researchleadagent.txt  util.txt
scripts/: README.md  apply_migration.py  apply_migration_008.py  apply_migration_009.py  archive_completed_backlog.py  audit_l4_coverage.py  backfill_synthesis_embeddings.py  benchmark_toon.py  check_artifact.py  check_status.py  cleanup_false_positives.py  complete_concept_embeddings.py  debug_extraction.py  dev.ps1  generate_embeddings.py  get_full_schema.py  investigate_concepts.py  investigate_cross_pollination.py  investigation_a1.py  investigation_a2.py  load_test.py  manifest_sync.py  migrate_backlog.py  migrate_backlog_archive.py  migrate_timestamps.py  migrate_work_dirs.py  plan_tree.py  query_progress.py  register_agents.py  test_embedding_compatibility.py  update_schema_links.py  validate_schema.py  verify_data_quality.py  verify_live_db_constraints.py  verify_llm_classification.py  verify_space_id.py  verify_sqlite_vec.py  verify_stats.py
src/: __main__.py  engine.py  plan_runner.py  state_manager.py  task_executor.py
tests/: README.md  README_NEW.md  __init__.py  conftest.py  helpers.py  test_agent_capability_cards.py  test_agent_cards.py  test_anti_pattern_checker.py  test_arc_frontmatter.py  test_assets.py  test_audit_l4_coverage.py  test_backfill.py  test_backlog_id_uniqueness.py  test_backlog_migration.py  test_blocked_by_cascade.py  test_ceremony_cards.py  test_ceremony_context.py  test_ceremony_contracts.py  test_ceremony_enforcement_runtime.py  (+121 more)
(+2970 files in other folders)
